hidden overflow each section to fix aos overflow issue

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -48,7 +48,7 @@
   width: 24px;
   height: 24px;
   color: #4b5563;
-  background-color: transparent;
+  background-color: #C4DCC6;
   border: none;
   outline: none;
 }
